# brainfuck

./: .markdownlint.yaml  LICENSE  Makefile  README.md
.github/workflows/: markdown.yaml  ocaml.yaml  python.yaml
Dockerfiles/: python-tools.Dockerfile
brainfuck/: Dockerfile  README.md  integration_test.py  isa.py  machine.py  pyproject.toml  pytest.ini  requirements.txt  translator.py
brainfuck-ocaml/: README.md  datapath.ml  dune  machine.ml  machine.mli  machine_cli.ml  test_cat.ml  test_hello.ml
brainfuck-ocaml/examples/: hello.json
brainfuck/examples/: input.txt
brainfuck/golden/: cat.yml  hello.yml
dockerfile-tool/: java-tools
ocaml/: .ocamlformat  README.md  brainfuck_machine.opam  code.ml  datapath.ml  dune  dune-project  hardwired.ml  microcoded.ml
ocaml/examples/: cat.json
python/: .gitignore  Makefile  README.md  README_asm.md  golden_asm_test.py  golden_bf_test.py  integration_test.py  isa.py  machine.py  pyproject.toml  translator.py  translator_asm.py
python/examples/: cat.asm
python/golden/: cat_asm.yml  cat_bf.yml  hello_bf.yml
