(library
 (name machines)
 (libraries core yojson ppx_deriving.std)
 (modules code datapath hardwired microcoded)
 (preprocess
  (pps ppx_deriving.show ppx_expect ppx_inline_test)))

(library
 (name test_machine)
 (libraries machines)
 (modules test_cat test_hello)
 (inline_tests
  (deps examples/cat.json examples/hello.json examples/foo_input.txt))
 (preprocess
  (pps ppx_deriving.show ppx_expect ppx_inline_test)))

(executable
 (name machine_cli)
 (libraries machines)
 (modules machine_cli))
